--- a/gpt4all-backend-test/src/CMakeLists.txt
+++ b/gpt4all-backend-test/src/CMakeLists.txt
@@ -1,19 +1,13 @@
 set(TARGET test-backend)
 
-configure_file(config.cppm.in "${CMAKE_CURRENT_BINARY_DIR}/config.cppm")
+configure_file(config.h.in "${CMAKE_CURRENT_BINARY_DIR}/include/config.h")
 
 add_executable(${TARGET}
     main.cpp
 )
 target_compile_features(${TARGET} PUBLIC cxx_std_23)
-if (CMAKE_COMPILER_IS_GNUCXX)
-    target_compile_options(${TARGET} PUBLIC -fmodules-ts)
-endif()
-target_sources(${TARGET} PRIVATE
-    FILE_SET gpt4all_backend TYPE CXX_MODULES BASE_DIRS
-        "${CMAKE_CURRENT_BINARY_DIR}"
-    FILES
-        "${CMAKE_CURRENT_BINARY_DIR}/config.cppm"
+target_include_directories(${TARGET} PRIVATE
+    "${CMAKE_CURRENT_BINARY_DIR}/include"
 )
 gpt4all_add_warning_options(${TARGET})
 target_link_libraries(${TARGET} PRIVATE
