WIP: use Boost::json for incremental parsing and reflection

--- a/gpt4all-backend-test/CMakeLists.txt
+++ b/gpt4all-backend-test/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.29)
+cmake_minimum_required(VERSION 3.28...3.31)
 project(gpt4all-backend-test VERSION 0.1 LANGUAGES CXX)
 
 set(G4A_TEST_OLLAMA_URL "http://localhost:11434/" CACHE STRING "The base URL of the Ollama server to use.")
