--- a/gpt4all-backend/CMakeLists.txt
+++ b/gpt4all-backend/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.28)
+cmake_minimum_required(VERSION 3.28...3.31)
 project(gpt4all-backend VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 23)  # make sure fmt is compiled with the same C++ version as us
@@ -7,6 +7,7 @@ include(../common/common.cmake)
 find_package(Qt6 6.8 COMPONENTS Concurrent Core Network REQUIRED)
 
 add_subdirectory(../deps common_deps)
+add_subdirectory(deps)
 add_subdirectory(src)
 
 target_sources(gpt4all-backend PUBLIC
