rename the class to "OllamaClient"

--- a/gpt4all-backend/CMakeLists.txt
+++ b/gpt4all-backend/CMakeLists.txt
@@ -11,7 +11,7 @@ add_subdirectory(deps)
 add_subdirectory(src)
 
 target_sources(gpt4all-backend PUBLIC
-    FILE_SET public_headers TYPE HEADERS BASE_DIRS include
-    FILES include/gpt4all-backend/main.h
-          include/gpt4all-backend/formatters.h
+    FILE_SET public_headers TYPE HEADERS BASE_DIRS include FILES
+        include/gpt4all-backend/formatters.h
+        include/gpt4all-backend/ollama_client.h
 )
