--- a/gpt4all-backend/CMakeLists.txt
+++ b/gpt4all-backend/CMakeLists.txt
@@ -14,4 +14,5 @@ target_sources(gpt4all-backend PUBLIC
     FILE_SET public_headers TYPE HEADERS BASE_DIRS include FILES
         include/gpt4all-backend/formatters.h
         include/gpt4all-backend/ollama_client.h
+        include/gpt4all-backend/ollama_responses.h
 )
