--- a/gpt4all-backend/src/CMakeLists.txt
+++ b/gpt4all-backend/src/CMakeLists.txt
@@ -1,8 +1,8 @@
 set(TARGET gpt4all-backend)
 
 add_library(${TARGET} STATIC
-    json_helpers.cpp
-    ollama_client.cpp
+    json-helpers.cpp
+    ollama-client.cpp
 )
 target_compile_features(${TARGET} PUBLIC cxx_std_23)
 gpt4all_add_warning_options(${TARGET})
