--- a/gpt4all-backend/CMakeLists.txt
+++ b/gpt4all-backend/CMakeLists.txt
@@ -13,7 +13,10 @@ add_subdirectory(src)
 target_sources(gpt4all-backend PUBLIC
     FILE_SET public_headers TYPE HEADERS BASE_DIRS include FILES
         include/gpt4all-backend/formatters.h
+        include/gpt4all-backend/generation-params.h
         include/gpt4all-backend/json-helpers.h
         include/gpt4all-backend/ollama-client.h
+        include/gpt4all-backend/ollama-model.h
         include/gpt4all-backend/ollama-types.h
+        include/gpt4all-backend/rest.h
 )
